@@ -34,12 +34,12 @@
 #    include "errno.h"
 #  endif
 
-#  if defined (_STLP_WCE)
-/* on evc3/evc4 including stdlib.h also defines setjmp macro */
-#    include "setjmp.h"
-#  endif
-
 #  include _STLP_NATIVE_C_HEADER(stdlib.h)
+
+/* on evc3/evc4 including stdlib.h also defines setjmp macro */
+#  if defined(_STLP_WCE)
+#    define _STLP_NATIVE_SETJMP_H_INCLUDED
+#  endif
 
 #  if (_STLP_OUTERMOST_HEADER_ID == 0x265)
 #    if ! defined (_STLP_DONT_POP_HEADER_ID)
